UI Components, fixed placement of legacy expand/collapse: Fix of #27355

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -16438,6 +16438,9 @@ div.ilContainerListItemCB {
   vertical-align: top;
   padding-right: 10px;
 }
+div.ilContainerListItemCB img {
+  width: 20px;
+}
 [dir="rtl"] div.ilContainerListItemCB {
   /* float: right; */
 }
